# MIDST

./: .gitignore  README.md  _config.yaml  organizers.md  pyproject.toml
_data/: organizers.yml
codabench_bundles/midst_blackbox_multi_table/: competition.yaml
codabench_bundles/midst_blackbox_multi_table/pages/: Evaluation.md  overview.md
codabench_bundles/midst_blackbox_single_table/: competition.yaml
codabench_bundles/midst_blackbox_single_table/data/: tabddpm_mapping_final.json
codabench_bundles/midst_blackbox_single_table/pages/: overview.md  terms.md
codabench_bundles/midst_blackbox_single_table/scoring_program/: scoring.py
codabench_bundles/midst_whitebox_multi_table/: competition.yaml
codabench_bundles/midst_whitebox_multi_table/data/: clavaddpm_mapping_final.json
codabench_bundles/midst_whitebox_multi_table/pages/: Evaluation.md  overview.md  (+1 more)
codabench_bundles/midst_whitebox_single_table/: competition.yaml
docs/: Gemfile  _config.yaml  faq.md  index.md  organizers.md  sponsors.md
docs/_data/: organizers.yml  sponsors.yml
docs/_layouts/: custom.html
midst/: data.py
reference_implementations/clavaDDPM_single_table_synthesis/: .gitignore  ClavaDDPM.ipynb  README.md  pipeline_utils.py
scripts/: extract_data.py  extract_solution.py  merge_mappings.py
starter_kits/: blackbox_multi_table.ipynb  blackbox_single_table.ipynb  blackbox_single_table_tabddpm.ipynb  whitebox_multi_table.ipynb  whitebox_single_table.ipynb  whitebox_single_table_tabddpm.ipynb
starter_kits/.ipynb_checkpoints/: blackbox_single_table_tabddpm-checkpoint.ipynb
(+98 files in other folders)
