[tool.poetry]
name = "midst"
version = "0.1.0"
description = "Resources for the Membership Inference over Diffusion-models-based Synthetic Tabular Data (MIDST) Challenge @ SaTML 2025"
authors = ["John Jewell <john.jewell@vectorinstitute.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
numpy = "^2.1.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
gdown = "^5.2.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
